--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
         }
     },
     "scripts": {
+        "post-install-cmd": [
+        "@php artisan optimize"
+    ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
